<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>net.goui.flogger.next</groupId>
        <artifactId>root</artifactId>
        <version>1.0.0</version>
    </parent>

    <name>Logger Next</name>
    <artifactId>logger</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <url>${base.url}/${project.artifactId}</url>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/com.google.flogger/flogger -->
        <dependency>
            <groupId>com.google.flogger</groupId>
            <artifactId>flogger</artifactId>
            <version>${flogger.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.flogger/google-extensions -->
        <dependency>
            <groupId>com.google.flogger</groupId>
            <artifactId>google-extensions</artifactId>
            <version>${flogger.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.errorprone/error_prone_annotations -->
        <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_annotations</artifactId>
            <version>${error-prone.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.goui.flogger-testing/junit4 -->
        <dependency>
            <groupId>net.goui.flogger-testing</groupId>
            <artifactId>junit4</artifactId>
            <version>${flogger-testing.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.flogger/flogger-grpc-context -->
        <dependency>
            <groupId>com.google.flogger</groupId>
            <artifactId>flogger-grpc-context</artifactId>
            <version>${flogger.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
